# aiida-fleur

./: .gitignore  .gource.conf  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.txt  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  STYLE_CONVENTION.txt  WF_STYLE_CONVENTION.txt  copy_plugin_files.sh  plugins.json  pyproject.toml  pytest.ini  requirements.txt  setup.json  setup.py  setup_requirements.txt
.ci/: test_script.sh
.github/workflows/: ci.yml  conda-code.yml  python-publish.yml
aiida_fleur/: __init__.py
aiida_fleur/calculation/: __init__.py  fleur.py  fleurinputgen.py
aiida_fleur/cmdline/: __init__.py
aiida_fleur/common/: constants.py  defaults.py  mapping.py  node_generators.py
aiida_fleur/data/: __init__.py  fleurinp.py  fleurinpmodifier.py  magnetic_structure.py
aiida_fleur/fleur_schema/: README  __init__.py  schemafile_index.py
aiida_fleur/parsers/: __init__.py  fleur.py  fleur_inputgen.py
aiida_fleur/tests/: .aiida-mock-codes.yml  .aiida-testing-config.yml  .coveragerc  README.txt  b_test_aiida_pytest_config.py  conftest.py  helpers.py  migrate_exports.py  run_all.sh  run_all_cov.sh  test_entrypoints.py  test_workflows_builder_init.py
aiida_fleur/tools/: .common_fleur_wf.py.swp  ParameterData_util.py  StructureData_util.py  __init__.py  bfgs.py  check_existence.py  common_aiida.py  common_fleur_wf.py  common_fleur_wf_util.py  create_corehole.py  create_kpoints_from_distance.py  data_handling.py  decide_ncore.py  dict_util.py  element_econfig_list.py  exp_bindingenergies.json  extract_corelevels.py  graph_fleur.py  io_routines.py  merge_parameter.py  queue_defaults.py  read_cif_folder.py  set_nmmpmat.py  straight_torque.py  xml_aiida_modifiers.py  xml_util.py
aiida_fleur/util/: check_existence.py  create_corehole.py  extract_corelevels.py
aiida_fleur/workflows/: .dos.py.swp  __init__.py  b_corehole.py  b_corehole.py.legacy  band.py  band2.py  band2.py.legacy  banddos.py  base_fleur.py  base_relax.py  cfcoeff.py  corehole.py  corelevel.py  corelevel.py.legacy  create_magnetic_film.py  delta.py  delta_split.py  delta_split.py.legacy  dmi.py  dos.py  dummy.py  dummy.py.legacy  eos.py  eos2.py  eos_simple.py  greensf.py  greensf_dmi.py  hubbard1.py  initial_cls.py  initial_state_CLS.py  jij.py  mae.py  mae_conv.py  mag_rotate.py  optimize_para.py  orbcontrol.py  relax.py  relax_new.py  relax_torque.py  run_dummy.py  (+7 more)
aiida_fleur_ad/util/: create_corehole.py  element_econfig_list.py  extract_corelevels.py
aiida_fleur_ad/workflows/: b_corehole.py  corehole.py  corelevel.py  initial_cls.py
doc/source/: b_code
docs/: Makefile  README.rst  b_code  code.rst  conf.py  index.rst  requirements_for_rtd.txt  requirements_for_rtd_aiida.txt  rtd_settings.py
docs/docs_basewf/: index.rst  workflows.rst
docs/source/: .conf.py.swp  b_index.rstb  code.rst  conf.py  index.rst  nitpick-exceptions
examples/: Cu_bulk.py  README.md  Si_bulk.py  Si_bulk2.py  run_all_workflows_tests.sh
examples/benchmarks/: bench.py  fleur_benchmark_resources.json
examples/old_workflowtests/: test_inital_state.py  test_run_scf2.py  test_submit_inpgen.py
examples/out_xml_files/: out.xml  outBeCr.xml
examples/simple/: Cu_bulk.py  Si_bulk.py  Si_bulk2.py  TiO2_and_MoS2_tutorial.ipynb
examples/submission/: test_CuBand_fleur.py  test_submit_fleur_lsf_serial.py  test_submit_inpgen_calc.py
subdir/: AUTHORS.txt  README.md  WF_STYLE_CONVENTION.txt  copy_plugin_files.sh  requirements.txt  setup.py
subdir/docs/: Makefile  b_test  utility.rst
subdir/util/: decide_ncore.py
subdir/workflows/: convergence.py
test/parsers/: test_fleur_output_parser.py
test/submission/: check_test_fleur.py  check_test_inpgen.py  test_CuBand_fleur.py  test_CuBulk_fleur.py  test_Fe_1lXML_fleur.py  test_Fe_bctXML_fleur.py  test_Fe_bct_LOXML_fleur.py  test_NaOW_fleur.py  test_NiO_ldauXML_fleur.py  test_PTO_SOCXML_fleur.py  test_submit_inpgen.py
test/util/: test_read_cif_folder.py
test/workflows/: test_band.py  test_convergence.py  test_dos.py  test_eos.py  test_scf.py
tests/: .aiida-testing-conda-config.yml  .aiida-testing-config.yml  README.txt  codecov.yml  conftest.py  migrate_exports.py  run.sh  run_all.sh  run_all_cov.sh  run_all_cov_show.sh  test_calcfunctions_immutabledefaults.py  test_common_fleur_wf.py  test_convergence.py  test_convergence2.py  test_entrypoints.py  test_fleurinpmodefier.py  test_read_cif_folder.py  test_workflows_builder_init.py  update_workflow_caches.py  workflows_regression_manually.py  workflows_regression_manually.sh
tests/.aiida/: config.json
tests/benchmarks/: bench.py  fleur_benchmark_resources.json
tests/calculation/: test_fleur.py  test_inpgen.py
tests/cmdline/: conftest.py  test_base_all_commands.py  test_types.py
tests/common/: test_node_generators.py
tests/data/: __init__.py  test_fleurinp.py  test_fleurinpmodifier.py  test_magnetic_structure.py
tests/files/: parsed_inpxml.txt
tests/fleur_schema/: test_schema_files.py
tests/local_exe/: README.txt
tests/out_xml_files/: outBeCr.xml
tests/parsers/: test_fleur_output_parser.py  test_fleur_parser.py  test_inpgen_parser.py
tests/submission/: check_test_submit_fleur.py  test_Bi2Te3_fleur.py  test_CuBulk_fleur.py  test_CuDOS_fleur.py  test_Fe_1lXML_fleur.py  test_Fe_1l_SOCXML_fleur.py  test_Fe_bct_LOXML_fleur.py  test_Fe_bct_SOCXML_fleur.py  test_Fe_fccXML_fleur.py  test_NiO_ldauXML_fleur.py  test_PTOXML_fleur.py  test_PTO_SOCXML_fleur.py  test_inpgen_complex.py  test_inpgen_minimal.py  test_submit_fleur.py  test_submit_fleur_lsf.py  test_submit_fleur_lsf_serial.py  test_submit_fleur_mpi.py  test_submit_inpgen.py  test_submit_inpgen_process.py
tests/test_submit/: test_fleur.py
tests/tools/: test_StructureData_util.py  test_common_aiida.py  test_common_fleur_wf.py  test_common_fleur_wf_util.py  (+13 more)
util/: create_corehole.py  extract_corelevels.py
utils/: validate_version_consistency.py
workflows/: band.py  calculate_lattice_con.py  convergence.py  corehole.py  corelevel.py  dos.py  eos.py  inital_state_CLS.py  initial_state_CLS.py
(+1227 files in other folders)
